[gd_scene load_steps=6 format=3 uid="uid://cptj3m7nmaarl"]

[ext_resource type="Script" uid="uid://b7je2mjbc7mpj" path="res://ui2.gd" id="1_drk0o"]
[ext_resource type="PackedScene" uid="uid://d2rto2wwl4q0" path="res://neuron.tscn" id="2_avs3i"]
[ext_resource type="PackedScene" uid="uid://cwobn4qvrbb0" path="res://platformer.tscn" id="3_qjbk7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drk0o"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.74558, 0.74558, 0.74558, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_drk0o"]
font_color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="Ui2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_drk0o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 15)
layout_mode = 2
show_percentage = false

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2

[node name="Page1" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
visible = false
custom_minimum_size = Vector2(0, 600)
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page1"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_drk0o")

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page1"]
layout_mode = 2
text = "This is the text on page 1"
label_settings = SubResource("LabelSettings_drk0o")

[node name="Page2" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
visible = false
custom_minimum_size = Vector2(0, 600)
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page2"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_drk0o")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page2"]
layout_mode = 2

[node name="Control" type="AspectRatioContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page2/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="Node2D" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page2/VBoxContainer/Control" instance=ExtResource("2_avs3i")]
position = Vector2(90, 100)

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page2/VBoxContainer"]
layout_mode = 2
text = "This is the text on page 2"
label_settings = SubResource("LabelSettings_drk0o")

[node name="Page3" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page3"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_drk0o")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page3"]
layout_mode = 2

[node name="Control" type="AspectRatioContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page3/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="Platformer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page3/VBoxContainer/Control" instance=ExtResource("3_qjbk7")]
position = Vector2(-80, -1.425)
scale = Vector2(0.315, 0.315)

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/Page3/VBoxContainer"]
layout_mode = 2
text = "This is the text on page 3"
label_settings = SubResource("LabelSettings_drk0o")
